# quoridor-bot

./: Cargo.toml  NEURAL_NETWORK_TESTS.md  README_NN.md  TRAINING_GUIDE.md  biased_up.mpk  quick_test.mpk  quick_test2.mpk  test_model.mpk  test_with_metadata.mpk  test_with_metadata.toml
darwin_training_data/: generation_0000.json  generation_0001.json  generation_0002.json  generation_0003.json
neuralnet_models/: IMPROVEMENT_ROADMAP.md  default_training_config.toml
saves/: abe-misplay  dedi-vs-boys-1  dedi-vs-boys-2  dedi-vs-boys-3  skip
src/: a_star.rs  a_star_to_opponent.rs  all_moves.rs  args.rs  bot.rs  commands.rs  data_model.rs  draw.rs  game_logic.rs  generic_heuristic.rs  l_p_a_star.rs  lib.rs  main_cli.rs  main_darwin_training.rs  main_gui.rs  main_nn.rs  nn_bot.rs  nn_inference.rs  nn_training.rs  player_type.rs  priority_queue.rs  render_board.rs  session.rs
src/agent/: mod.rs
src/agent/abe/: mod.rs
src/agent/bot/: mod.rs
src/agent/carlo/: board.rs  mod.rs
src/agent/dedi/: bit_set.rs  mod.rs  walls.rs
src/agent/neural_net/: mod.rs
src/agent/nn_bot/: mod.rs
src/agent/random/: mod.rs
src/bot/: mod.rs
src/bot/abe/: alpha_beta.rs  heuristic.rs  mod.rs  move_ordering.rs
src/bot/carlo/: bfs.rs  board.rs  buffer.rs  iter.rs  mcts.rs  mod.rs  node.rs  path.rs
src/bot/darwin/: data_model.rs  evaluate.rs  evolve.rs  mod.rs
src/bot/dedi/: heuristic.rs  minimax.rs  mod.rs  walls.rs
src/bot/monte/: mod.rs  monte.rs
src/bot/monte_ext/: monte.rs
src/bot/neural_net/: mod.rs  nn_bot.rs  nn_config.rs  nn_inference.rs  nn_training.rs
src/bot/random/: mod.rs
