[package]
name = "quoridor-bot"
version = "0.1.0"
edition = "2024"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "quoridor-bot-gui"
path = "src/main_gui.rs"

[dependencies]
burn = {version = "0.16.0", features = ["ndarray"] }
burn-tch = "0.16"
burn-ndarray = "0.14"
clap = "4.5.45"
clap_derive = "4.5.45"
ggez = "0.9.3"
rand = "0.9.2"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_json_any_key = "2.1.0"
ntest = "0.9.5"
